--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,4 +21,6 @@ jobs:
         java-version: 11
 
     - name: Build with Gradle
-      run: ./gradlew assembleDebug
+      run: |
+        cd NavidromeMusicPlayer
+        ./gradlew assembleDebug
