--- a/NavidromeMusicPlayer/gradle.properties
+++ b/NavidromeMusicPlayer/gradle.properties
@@ -11,6 +11,8 @@ org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.configureondemand=true
 org.gradle.jvmargs=-Xmx4g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+# Gradle 兼容模式
+org.gradle.warning.mode=all
 
 # Java 兼容性设置
 android.compileOptions.sourceCompatibility=17
@@ -23,4 +25,6 @@ android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveR=true
 
 # Gradle 版本检查（可选）
-android.suppressUnsupportedCompileSdk=33
+# android.suppressUnsupportedCompileSdk=33
+# 新的（使用正确的配置）
+android.compileSdk=34
