--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Build with Gradle
       run: |
         cd NavidromeMusicPlayer
+        echo list files
         ls
-        gradle wrapper
-        ls
+        echo start build
         ./gradlew assembleDebug
