--- a/NavidromeMusicPlayer/build.gradle
+++ b/NavidromeMusicPlayer/build.gradle
@@ -5,7 +5,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.0'
+        // 升级 Android Gradle 插件 (AGP) 版本，确保兼容 Kotlin 1.8.0
+        classpath 'com.android.tools.build:gradle:8.2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -15,15 +16,18 @@ allprojects {
         google()
         mavenCentral()
     }
+}
 
-    tasks.withType(JavaCompile) {
+// 确保 Java 11 兼容
+subprojects {
+    tasks.withType(JavaCompile).configureEach {
         sourceCompatibility = JavaVersion.VERSION_11
         targetCompatibility = JavaVersion.VERSION_11
     }
-}
 
-tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
-    kotlinOptions {
-        jvmTarget = "11"
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+        kotlinOptions {
+            jvmTarget = "11"
+        }
     }
 }
