--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,29 +1,31 @@
-name: Android CI
+name: Android Build
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin'
-        java-version: 11
+      - name: Fix line endings for gradlew
+        run: sed -i 's/\r$//' gradlew
 
-    - name: Build with Gradle
-      run: |
-        cd NavidromeMusicPlayer
-        echo list files
-        ls
-        echo start build
-        ./gradlew assembleDebug
+      - name: Grant Execute Permission for gradlew
+        run: chmod +x gradlew
+
+      - name: Regenerate Gradle Wrapper
+        run: ./gradlew wrapper --gradle-version 8.5
+
+      - name: Setup JDK
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Build with Gradle
+        run: ./gradlew build
