--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -33,4 +33,5 @@ jobs:
         echo list files
         ls
         echo start build
+        cd NavidromeMusicPlayer
         ./gradlew assembleDebug
