更新 gradle.properties

--- a/NavidromeMusicPlayer/gradle.properties
+++ b/NavidromeMusicPlayer/gradle.properties
@@ -19,7 +19,7 @@ android.compileOptions.sourceCompatibility=17
 android.compileOptions.targetCompatibility=17
 
 # 关闭不必要的警告日志
-android.defaults.buildfeatures.buildconfig=true
+# android.defaults.buildfeatures.buildconfig=true
 
 # 允许使用新 API（如果目标 API 级别较高）
 android.nonTransitiveR=true
