更新 AndroidManifest.xml

--- a/NavidromeMusicPlayer/app/src/main/AndroidManifest.xml
+++ b/NavidromeMusicPlayer/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.navidromemusicplayer">
+    package="com.pusic">
 
     <!-- 网络访问和下载权限 -->
     <uses-permission android:name="android.permission.INTERNET" />
