--- a/NavidromeMusicPlayer/app/build.gradle
+++ b/NavidromeMusicPlayer/app/build.gradle
@@ -4,13 +4,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 33
-    namespace "com.pusic"  // 修改为你的包名
+    compileSdk 33
+    namespace "com.pusic"  // 确保与 AndroidManifest.xml 一致
 
     defaultConfig {
         applicationId "com.pusic"
-        minSdkVersion 21
-        targetSdkVersion 33
+        minSdk 21
+        targetSdk 33
         versionCode 1
         versionName "1.0"
     }
@@ -18,6 +18,10 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
+    }
+
+    buildFeatures {
+        viewBinding true
     }
 
     buildTypes {
@@ -28,13 +32,23 @@ android {
     }
 }
 
+// 确保 Kotlin 使用 Java 17
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
     kotlinOptions {
         jvmTarget = "17"
     }
+}
 
+// 确保 Gradle 也使用 Java 17
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
+}
+
+// 依赖项
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.0"
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
@@ -47,7 +61,7 @@ dependencies {
     // ExoPlayer 音频播放
     implementation 'com.google.android.exoplayer:exoplayer:2.18.1'
 
-    // 协程支持（可选）
+    // 协程支持
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
 
     // Lifecycle 用于协程作用域
