--- a/NavidromeMusicPlayer/app/build.gradle
+++ b/NavidromeMusicPlayer/app/build.gradle
@@ -50,6 +50,7 @@ java {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.0"
     implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1' // 修复 RecyclerView 依赖
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
